--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -7,10 +7,11 @@ section{
 
 #first{
         background-color: #efd592;
+        position: relative;
 }
  #second{
         background-color: #4343f9;
-        position: absolute;
+        position: relative;
 }
 
 #button-1{
